--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  sqflite: ^1.2.0
-  path_provider: ^1.6.0
-  mobx: ^0.4.0+1
-  flutter_mobx: ^0.3.6
-  get_it: ^3.1.0
-  flushbar: ^1.9.1
+  sqflite: ^1.2.0 #Plugin para SQLite
+  path_provider: ^1.6.0  #Plugin para encontrar os filesystem mais comuns em android e ios.
+  mobx: ^0.4.0+1 #Biblioteca para gerenciamento de estado reativo
+  flutter_mobx: ^0.3.6 #Integração do flutter com mobx. Automaticamente atualiza o observable quando muda
+  flushbar: ^1.9.1 #SnackBar personalizada
 
 dev_dependencies:
   flutter_test:
