--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,12 @@ dependencies:
   flutter_mobx: ^0.3.6 #Integração do flutter com mobx. Automaticamente atualiza o observable quando muda
   flushbar: ^1.9.1 #SnackBar personalizada
   flutter_typeahead: ^1.8.0
+  pagarme_mpos_flutter: ^0.1.0
+  flutter_blue: 0.6.3+1
+  flutter_bluetooth_serial: ^0.0.4
+  http: ^0.12.0+4
+  build_runner: ^1.7.3
+  mobx_codegen: ^0.4.0+1
 
 dev_dependencies:
   flutter_test:
