--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
   flutter_blue: 0.6.3+1
   flutter_bluetooth_serial: ^0.0.4
   http: ^0.12.0+4
-  build_runner: ^1.7.3
-  mobx_codegen: ^0.4.0+1
+  carousel_pro: ^0.0.13
+  combos: ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +59,10 @@ flutter:
     - images/approve.png
     - images/splash.png
     - images/pay.png
+    - images/modal1.png
+    - images/modal2.png
+    - images/modal3.png
+    - images/modal4.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
