--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ flutter:
   assets:
     - images/card.png
     - images/approve.png
+    - images/fail.png
     - images/splash.png
     - images/pay.png
     - images/modal1.png
