--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   http: ^0.12.0+4
   carousel_pro: ^0.0.13
   combos: ^1.2.0
+  cpfcnpj: ^1.0.3
 
 dev_dependencies:
   flutter_test:
