--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   carousel_pro: ^0.0.13
   combos: ^1.2.0
   cpfcnpj: ^1.0.3
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
