--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   combos: ^1.2.0
   cpfcnpj: ^1.0.3
   shared_preferences: ^0.5.12+4
+  flutter_launcher_icons: "^0.8.0"
+  build_runner: ^1.7.3
 
 dev_dependencies:
   flutter_test:
