--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,7 +82,7 @@ flutter:
 flutter_icons:
   android: true
   ios: true
-  image_path: "images/foreground.png"
+  image_path: "images/logo.png"
   adaptive_icon_background: "images/background.png"
   adaptive_icon_foreground: "images/foreground.png"
 
