--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,11 @@ dependencies:
   http: ^0.12.0+4
   carousel_pro: ^0.0.13
   combos: ^1.2.0
+  dio: ^3.0.10
+  get_it: ^5.0.4
   cpfcnpj: ^1.0.3
   shared_preferences: ^0.5.12+4
   flutter_launcher_icons: "^0.8.0"
-  build_runner: ^1.7.3
   share: ^0.6.5+4
   url_launcher: ^5.7.10
   mask_text_input_formatter: ^1.0.6
@@ -48,6 +49,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.7.3
   mobx_codegen: ^0.4.0+1 #gerador de código para mobx, elimina boilerplate, faz o nome_classe.g.dart
 
 
