--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   share: ^0.6.5+4
   url_launcher: ^5.7.10
   mask_text_input_formatter: ^1.0.6
+  connectivity: ^2.0.2
 
 dev_dependencies:
   flutter_test:
