--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: estruturabasica
-description: A new Flutter project.
+name: ecommerceBankPay
+description: app de pagamento do ecommerce bank.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: ">=2.2.0 <3.0.0"
@@ -46,6 +46,7 @@ dependencies:
   url_launcher: ^5.7.10
   mask_text_input_formatter: ^1.0.6
   connectivity: ^2.0.2
+  package_info: 0.4.3+4
 
 dev_dependencies:
   flutter_test:
