--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: app de pagamento do ecommerce bank.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0
+version: 1.0.1+5
 
 environment:
   sdk: ">=2.2.0 <3.0.0"
@@ -47,6 +47,7 @@ dependencies:
   mask_text_input_formatter: ^1.0.6
   connectivity: ^2.0.2
   package_info: 0.4.3+4
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
