--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: app de pagamento do ecommerce bank.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+6
+version: 1.0.1+7
 
 environment:
   sdk: ">=2.2.0 <3.0.0"
@@ -48,6 +48,8 @@ dependencies:
   connectivity: ^2.0.2
   package_info: 0.4.3+4
   intl: ^0.16.1
+  image_picker: ^0.6.7+22
+  image_cropper: ^1.3.1
 
 dev_dependencies:
   flutter_test:
