--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   flutter_mobx: ^0.3.6 #Integração do flutter com mobx. Automaticamente atualiza o observable quando muda
   flushbar: ^1.9.1 #SnackBar personalizada
   flutter_typeahead: ^1.8.0
+  dio: ^3.0.10
+  connectivity: ^2.0.2
 
 dev_dependencies:
   flutter_test:
